tests/baselines/reference/structAndClassWithSameName_basic.errors.txt
tests/cases/conformance/basicStructs/structDeclarations_basic/structAndClassWithSameName_basic.ts(1,8): error TS2300: Duplicate identifier 'C'.
tests/cases/conformance/basicStructs/structDeclarations_basic/structAndClassWithSameName_basic.ts(2,7): error TS2300: Duplicate identifier 'C'.
tests/cases/conformance/basicStructs/structDeclarations_basic/structAndClassWithSameName_basic.ts(5,12): error TS2300: Duplicate identifier 'D'.
tests/cases/conformance/basicStructs/structDeclarations_basic/structAndClassWithSameName_basic.ts(9,11): error TS2300: Duplicate identifier 'D'.


==== tests/cases/conformance/basicStructs/structDeclarations_basic/structAndClassWithSameName_basic.ts (4 errors) ====
    struct C { foo: string; }
           ~
!!! error TS2300: Duplicate identifier 'C'.
    class C { foo: string; } // error
          ~
!!! error TS2300: Duplicate identifier 'C'.
    
    module M {
        struct D {
               ~
!!! error TS2300: Duplicate identifier 'D'.
            bar: string;
        }
    
        class D { // error
              ~
!!! error TS2300: Duplicate identifier 'D'.
            bar: string;
        }
    }